# ChangeLog for kde-base/dcopjava
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/dcopjava/Attic/ChangeLog,v 1.23 2007/05/24 11:08:31 carlo Exp $

  24 May 2007; Carsten Lohrke <carlo@gentoo.org> dcopjava-3.5.3.ebuild:
  Adjust MAXKDEVER.

  18 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> -dcopjava-3.5.0.ebuild:
  Remove old versions.

  03 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> dcopjava-3.5.3.ebuild:
  Bump to 3.5.5 (pre-release).

  17 Sep 2006; Carsten Lohrke <carlo@gentoo.org> -dcopjava-3.4.1.ebuild:
  Drop KDE 3.4.

  25 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> -dcopjava-3.3.1.ebuild:
  Drop 3.3 versions.

  25 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> dcopjava-3.5.3.ebuild:
  Bump to 3.5.4 (pre-release).

*dcopjava-3.5.3 (01 Jun 2006)

  01 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> +dcopjava-3.5.3.ebuild:
  Update to new release.

  29 May 2006; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Drop old versions.

*dcopjava-3.5.1 (23 Jan 2006)

  23 Jan 2006; Dan Armak <danarmak@gentoo.org> +dcopjava-3.5.1.ebuild:
  Version 3.5.1. Not yet released upstream, so package.masked for now.

*dcopjava-3.5.0 (22 Nov 2005)

  22 Nov 2005; Dan Armak <danarmak@gentoo.org> +dcopjava-3.5.0.ebuild:
  Ebuilds for KDE 3.5.0 final. It is not yet released, and is package.masked.

  22 Oct 2005; Mark Loeser <halcy0n@gentoo.org> dcopjava-3.5.0_beta2.ebuild:
  Adding ~x86 to keywords

*dcopjava-3.5.0_beta2 (19 Oct 2005)

  19 Oct 2005; Dan Armak <danarmak@gentoo.org> +dcopjava-3.5.0_beta2.ebuild:
  New version. Reminder: prerelease versions are permanently package.masked.

*dcopjava-3.4.1 (25 May 2005)

  25 May 2005; Dan Armak <danarmak@gentoo.org> +dcopjava-3.4.1.ebuild:
  Ebuilds for KDE 3.4.1. These are package.masked until 3.4.1 is actually
  released. You can't get the tarballs yet.
