@@ -1,16 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX no-gtk-glib-check.diff 949 RMD160 6df47b78e158fb7e38a49c30627421186d83e3da SHA1 234a650d3b629e41b2249ae99e6f7b0ee44fcf63 SHA256 f2721c8a1567ab9e259e216372a6552f8910fd33bc82390d8556aff00b0ba8df
 MD5 ffe26fb6d5d193883dfebd69250df2e5 files/no-gtk-glib-check.diff 949
 RMD160 6df47b78e158fb7e38a49c30627421186d83e3da files/no-gtk-glib-check.diff 949
 SHA256 f2721c8a1567ab9e259e216372a6552f8910fd33bc82390d8556aff00b0ba8df files/no-gtk-glib-check.diff 949
 DIST kdebindings-3.5.3.tar.bz2 5416888 RMD160 68ca9b57e6de96773bee2a1934db766e36872737 SHA1 e8081576cfb148f508c31e6e3b075d75b11f3577 SHA256 eeb08caa9b419fddd5fb1c5fdd1da7af3cf34ff57e605ed0ea1668d9272dda50
-EBUILD dcopjava-3.5.3.ebuild 868 RMD160 cecf152c6da366f98f44c7455e4f8786c8895a5c SHA1 dae54b022d9285c961479cc113438ac1a5b1e35c SHA256 21f6db93cc110ff22f1f4c1098d8d32ca5d694283c74508aa3373521f7f5aa21
-MD5 111daf6abdb7dd5a6ded127843e8900f dcopjava-3.5.3.ebuild 868
-RMD160 cecf152c6da366f98f44c7455e4f8786c8895a5c dcopjava-3.5.3.ebuild 868
-SHA256 21f6db93cc110ff22f1f4c1098d8d32ca5d694283c74508aa3373521f7f5aa21 dcopjava-3.5.3.ebuild 868
-MISC ChangeLog 3456 RMD160 d5aff1eabecd31b660331c4fcbb703cb6ea47d53 SHA1 358cf3e3e9ab7b637eec2b828e7ee689a86f8a2b SHA256 a1fe841553606e4fb1dedb202685707a39fce768e2e0004139308742bbbc9a97
-MD5 712ca7841ec72117f6927457e744eef3 ChangeLog 3456
-RMD160 d5aff1eabecd31b660331c4fcbb703cb6ea47d53 ChangeLog 3456
-SHA256 a1fe841553606e4fb1dedb202685707a39fce768e2e0004139308742bbbc9a97 ChangeLog 3456
+EBUILD dcopjava-3.5.3.ebuild 1090 RMD160 e1ccc78f3254b22cf0791333fd9078d3daa9e6b4 SHA1 5a4ae5e1620e7fe76fa16f1915b25f6e06c62d29 SHA256 17d8ce549f5c6298b11eb80e3833606ccdd1dbae1e01c9bd5197b7b4a157a15c
+MD5 3fc43ba5a73bb5640c62413c2d74a05b dcopjava-3.5.3.ebuild 1090
+RMD160 e1ccc78f3254b22cf0791333fd9078d3daa9e6b4 dcopjava-3.5.3.ebuild 1090
+SHA256 17d8ce549f5c6298b11eb80e3833606ccdd1dbae1e01c9bd5197b7b4a157a15c dcopjava-3.5.3.ebuild 1090
+MISC ChangeLog 3601 RMD160 282ddeb72663e45ef363391db7fe0d0c0fb28bbb SHA1 c2abc0c5543ffeb797834c67338af5be56898825 SHA256 7a6c0709164c353dedfab2c632d60b04f77d498807e46fa55e7c427a9375ff2b
+MD5 fbc2a68c05a3571c91e2a6e5c031ee42 ChangeLog 3601
+RMD160 282ddeb72663e45ef363391db7fe0d0c0fb28bbb ChangeLog 3601
+SHA256 7a6c0709164c353dedfab2c632d60b04f77d498807e46fa55e7c427a9375ff2b ChangeLog 3601
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
@@ -18,3 +21,10 @@ SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a metadata
 MD5 f57b09f0891543629efc337beee79f0c files/digest-dcopjava-3.5.3 259
 RMD160 08f2e958bea1f3c7a4839c9da95f66432df642f2 files/digest-dcopjava-3.5.3 259
 SHA256 b503b071b0fc92be80bf03101b99a4de1f7f621cd58788a86bb702c4f1985628 files/digest-dcopjava-3.5.3 259
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.4 (GNU/Linux)
+
+iD8DBQFGYuqTCkvF58q80IkRAgYhAJ9dnlDj12CtjbWyuDq6Jax8hYN5ygCghMGH
+zahlmge+kOl6ugRKYZILdJE=
+=9ASL
+-----END PGP SIGNATURE-----
