@@ -1,9 +1,11 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/dcopjava/Attic/dcopjava-3.5.3.ebuild,v 1.5 2007/05/24 11:08:31 carlo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/dcopjava/Attic/dcopjava-3.5.3.ebuild,v 1.6 2007/06/03 16:21:32 philantrop Exp $
 
 # NOTE TODO install a jar file rather than a tree of class files, and use java-pkg.eclass,
 # in keeping with policy
+
+# Do NOT stable this package!
 
 KMNAME=kdebindings
 KMEXTRACTONLY="kdejava/configure.in.in"
@@ -13,18 +15,26 @@ KM_DEPRANGE="$PV $MAXKDEVER"
 inherit kde-meta
 
 DESCRIPTION="Java bindings for DCOP"
-KEYWORDS="~amd64 ~x86" # broken according to upstream - 3.4a1 README
+KEYWORDS="~amd64 ~x86" # possibly broken according to upstream - 3.5.7 README
 IUSE=""
 DEPEND="virtual/jdk"
 RDEPEND="virtual/jre"
 PATCHES="$FILESDIR/no-gtk-glib-check.diff"
 
-
 pkg_setup() {
-	ewarn "This package is consdered broken by upstream. You're on your own."
+	ewarn "This package is considered \"possibly broken\" by upstream. You're on your own."
+}
+
+src_unpack() {
+	kde-meta_src_unpack
+
+	cd "${S}"/dcopjava/binding/org/kde/DCOP/
+	for x in Makefile.am Makefile.in; do
+		sed -e "s/-cp/-classpath/" -i ${x}
+	done
 }
 
 src_compile () {
-	myconf="$myconf --with-java=`java-config --jdk-home`"
+	myconf="$myconf --with-java=$(java-config --jdk-home)"
 	kde-meta_src_compile
 }
